--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,6 +25,7 @@ if (flutterVersionName == null) {
 android {
     namespace "com.anp.dms_anp"
     compileSdk = flutter.compileSdkVersion
+    useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "com.anp.dms_anp"
