--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         android:label="DMS ANP"
         android:icon="@mipmap/ic_launcher"
        android:usesCleartextTraffic="true">
+       <uses-library android:name="org.apache.http.legacy" android:required="false" />
        <meta-data android:name="com.google.android.geo.API_KEY"
            android:value="AIzaSyD2TFCSTdbRTmvblF1WYhGxfNMZtbseMQo"/>
         <activity
