--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   geolocator: ^14.0.2
   #location: ^1.4.1
   #share_plus: ^0.3.1
-  #file_picker: ^1.9.0+1
+  file_picker: ^8.1.4
+  excel: ^4.0.6
   unique_identifier: ^0.4.0
   font_awesome_flutter: ^10.12.0
   http: ^1.5.0
