--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
         <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
+
     <queries>
         <!-- If your app opens https URLs -->
         <intent>
@@ -26,7 +27,8 @@
    <application
         android:label="DMS ANP"
         android:icon="@mipmap/ic_launcher"
-       android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true"
+        android:enableOnBackInvokedCallback="true">
        <uses-library android:name="org.apache.http.legacy" android:required="false" />
        <meta-data android:name="com.google.android.geo.API_KEY"
            android:value="AIzaSyD2TFCSTdbRTmvblF1WYhGxfNMZtbseMQo"/>
